--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,5 @@ RewriteEngine on
 RewriteRule (.*)-(.*)\.html ?id=$2
 RewriteRule (.*)tag\.html ?tags=$1
 RewriteRule post.php(.*) $1
+
+ErrorDocument 404 /error.php?id=404
